友好的页面跳转

--- a/application/mobile/view/goods/good_info.html
+++ b/application/mobile/view/goods/good_info.html
@@ -32,7 +32,7 @@
 		<div class="wrap_frame">
 			<!-- header -->
 			<div class="lb_headWrap ">
-				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
+				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/goods/goodsList'">
 					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png" />
 				</p>
 				<span>详情</span>
