--- a/application/mobile/view/index/edit_password.html
+++ b/application/mobile/view/index/edit_password.html
@@ -19,7 +19,7 @@
 		<div class="wrap_frame">
 			<!--public head-->
 			<div class="lb_headWrap">
-				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
+				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/set_up'">
 					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
 				</p>
 				<span>重置密码</span>
