--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -54,9 +54,9 @@
 							</a>
 						</li>
 						<li class="navItem">
-							<a href="/mobile/user/my_gene">
+							<a href="/mobile/user/import_online">
 								<span><img src="__STATIC__/img/home/jiyin@2x.png"></span>
-								<span>基因关系</span>
+								<span>上传数据</span>
 							</a>
 						</li>
 						<li class="navItem">
