--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -37,19 +37,17 @@
 
 			<!--中间-->
 			<ul style="width: 92%;margin-left: 4%; ">
+				<li onClick="window.location.href='/mobile/user/distribution'">
+					<img class="img1" src="__STATIC__/img/my/fenxiao@2x.png" />
+					<a >我的团队</a>
+					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
+				</li>
 				<li onclick="window.location.href='/mobile/user/my_order'">
 					<img src="__STATIC__/img/my/dingdan@2x.png" class="img1" />
 					<a>我的订单</a>
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
 				</li>
-				<!-- <li onClick="window.location.href='/mobile/user/distribution'">
-
-					<img class="img1" src="__STATIC__/img/my/fenxiao@2x.png" />
-					<a >我的分销</a>
-					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
-
-				</li> -->
 				<li onClick="window.location.href='/mobile/user/my_walet'">
 
 				  
