--- a/application/mobile/view/user/distribution.html
+++ b/application/mobile/view/user/distribution.html
@@ -1,77 +1,70 @@
 <!DOCTYPE html>
 <html>
-
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no" />
-		<title>我的分销</title>
+		<title >我的团队</title>
 		<script src="__STATIC__/js/public/rem.js"></script>
 		<!--public-->
 		<link rel="stylesheet" href="__STATIC__/css/public/public.css" />
 		<link rel="stylesheet" href="__STATIC__/css/public/bottom_nav.css" />
 		<!--头部-->
 		<link rel="stylesheet" href="__STATIC__/css/public/public_head.css" />
-		<link rel="stylesheet" href="__STATIC__/css/my/mydistribution.css" />
-		
-
+		<link rel="stylesheet" href="__STATIC__/css/my/mobileSelect.css" />
+		<link rel="stylesheet" href="__STATIC__/css/my/team.css" />
+		<script src="http://www.jq22.com/jquery/jquery-1.10.2.js"></script>
+		<script type="text/javascript" src="__STATIC__/js/my/mobileSelect.js"></script>
+		<script type="text/javascript" src="__STATIC__/js/my/selectDate.js"></script>
 	</head>
-
 	<body>
-		<div class="wrap_frame">
+		
+	<div class="wrap_frame">
 			<!--public head-->
-			<div class="lb_headWrap">
-				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
+			<div class="lb_headWrap lb_headWrap_bacColor topBox_backgroundColor ">
+				<p class="lb_headWrap_return" data-num="1" onclick="javascript:location.href='/mobile/user/index'">
 					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
 				</p>
-				<span>我的分销</span>
+				<span>我的团队</span>
 				<!--<p class="lb_headWrap_text">领取产品</p>-->
 			</div>
-			
-			
-			
-			<!--总业绩和团队-->
-			<div class="zong">
-				
-				<div><span>总业绩￥55888</span></div>
-				<div><span>团队总人数60</span></div>		
-				
-			</div>
-			
-		   
-		   
-		 
-		    <!--列表-->
-		    <ul style="width: 100%;margin-top: .6rem;">
-		    	<li style="width: 92%;margin: auto;height: .8rem;line-height: .8rem;border-bottom:1px solid #ccc;" onClick="window.location.href='/mobile/user/team_list'">
-		    		
-					<a style="font-size: .3rem;font-weight: 200;vertical-align: center;display: inline-block;"  >团队列表</a>
-					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" style="float: right;position: relative;top: 50%;transform: translate(0,-50%);width: .22rem;" />
-		    		
-		    	</li>
-		    	<li style="width: 92%;margin: auto;height: .8rem;line-height: .8rem;border-bottom:1px solid #ccc;" onClick="window.location.href='/mobile/user/commission'">
-		    		
-					<a style="font-size: .3rem;font-weight: 200;vertical-align: center;display: inline-block;">佣金记录</a>
-					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" style="float: right;position: relative;top: 50%;transform: translate(0,-50%);width: .22rem;" />
-		    		
-		    	</li>
-		    	<li style="width: 92%;margin: auto;height: .8rem;line-height: .8rem;border-bottom:1px solid #ccc;" onClick="window.location.href='/mobile/user/performance'">
-		    		
-					<a style="font-size: .3rem;font-weight: 200;vertical-align: center;display: inline-block;">业绩明细</a>
-					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" style="float: right;position: relative;top: 50%;transform: translate(0,-50%);width: .22rem;" />
-		    		
-		    	</li>
-		    	
-		    	
-		    </ul>
-			
-			
-   
+		<div class="top">
+			<form>
+				<div class="list">
+					<input type="text" name="min" value="{$min}" id="select_0" readonly placeholder="请先选择起始日期"/>
+				</div>
+				<div class="guodu">--</div>
+				<div class="list1">
+					<input type="text" name="max" value="{$max}" id="select_1" readonly placeholder="请先选择结束日期"/>
+				</div>
+				<button class="find" type="submit">查询</button>
+			</form>
 			
 		</div>
+		
+		<p class="person_num">人数：{$count}</p>
+	<div>
+		{volist name="$list" id="vo"}
+		<div class="user">
+			<img src="__STATIC__/img/my/1.jpg" class="touxiang"/>
+			<div class="user_message">
+				<p><span>昵称:{$vo.nickname}</span><span class="bianhao">DI:{$vo.id}</span></p>
+				<p class="time">推荐时间：{$vo.addtime ? $vo.addtime : '--'}</p>
+			</div>
+		</div>
+		{/volist}
+		
+	</div>	
+	</div>	
+	<script src="__STATIC__/js/public/jquery-1.8.3.js"></script>
+	<script type="text/javascript" src="__STATIC__/js/my/mobileSelect.js"></script>
+	<script type="text/javascript" src="__STATIC__/js/my/selectDate.js"></script>
+	   <script>
+	   //选择 YYYY-MM-dd 格式的调用：
+			$.selectYY_MM_DD("#select_0");
+	   //选择 YYYY-MM-dd 格式的调用：
+			$.selectYY_MM_DD("#select_1");
 
-		<script src="__STATIC__/js/public/jquery-1.8.3.js"></script>
-		<script type="text/javascript" src="__STATIC__/js/public/public.js" ></script>
-
+	   </script>
+		
 	</body>
-
 </html>
