--- a/application/mobile/view/user/my_order.html
+++ b/application/mobile/view/user/my_order.html
@@ -29,7 +29,7 @@
 					<p class="tab_but {if condition='$status eq 1'}tab_but_active{/if}" onclick="javascript:location.href='/mobile/user/my_order?status=1'">待付款</p>
 					<p class="tab_but {if condition='$status eq 2'}tab_but_active{/if}" onclick="javascript:location.href='/mobile/user/my_order?status=2'">待发货</p>
 					<p class="tab_but {if condition='$status eq 3'}tab_but_active{/if}" onclick="javascript:location.href='/mobile/user/my_order?status=3'">待收货</p>
-					<p class="tab_but {if condition='$status eq 4'}tab_but_active{/if}" onclick="javascript:location.href='/mobile/user/my_order?status=4'">待评价</p>
+					<p class="tab_but {if condition='$status eq 4'}tab_but_active{/if}" onclick="javascript:location.href='/mobile/user/my_order?status=4'">已完成</p>
 				</div>
 				<!--Tab => 内容 wrap-->
 				<div class="tab_wrap">
