--- a/application/mobile/view/user/my_walet.html
+++ b/application/mobile/view/user/my_walet.html
@@ -44,8 +44,11 @@
        
        
        <ul class="qianbaolist">
-       	
-       	<li onClick="window.location.href='/mobile/user/billing_detail'">
+		<li onClick="window.location.href='/mobile/user/bill'">
+			<span >账单明细</span>
+			<img src="__STATIC__/img/my/youjian@2x.png"/>
+		</li>
+       	<!-- <li onClick="window.location.href='/mobile/user/billing_detail'">
        		<span >账单明细</span>
        		<img src="__STATIC__/img/my/youjian@2x.png"/>
        	</li>
@@ -55,7 +58,7 @@
        	<li onClick="window.location.href='/mobile/user/withdrawal_detail'">
        		<span >提现记录</span>
        		<img src="__STATIC__/img/my/youjian@2x.png"/>
-       	</li>
+       	</li> -->
        	
        </ul>
 
