--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -17,13 +17,7 @@
 
 	<body>
 		<div class="wrap_frame">
-			<!--public head-->
-
 			<div class="lb_headWrap ">
-				<!--<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
-					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/"/>
-				</p>-->
-
 				<span>我的</span>
 			</div>
 
@@ -31,6 +25,7 @@
 			<div class="my_pic">
 				<div style="width: 2rem; position: absolute;left: 50%;top: 50%;transform: translate(-50%,-50%);">
 					<img src="{$user['avatar']}" onerror="this.src='/public/mobile-default-user-icon.png'" style="width: 1.4rem;height: 1.4rem; border-radius: 50%;z-index: 1222;" />
+					<p style="font-size:12px;">ID：{$user['id']}</p>
 					<p>{$user['nickname']}</p>
 				</div>
 			</div>
@@ -38,7 +33,7 @@
 			<!--中间-->
 			<ul style="width: 92%;margin-left: 4%; ">
 				<li onClick="window.location.href='/mobile/user/distribution'">
-					<img class="img1" src="__STATIC__/img/my/fenxiao@2x.png" />
+					<img class="img1" src="__STATIC__/img/my/team.png" />
 					<a >我的团队</a>
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 				</li>
