--- a/application/admin/view/article/index.html
+++ b/application/admin/view/article/index.html
@@ -126,7 +126,7 @@
 						layer.msg('操作成功', { icon: 6, time: 1000 });
 						window.location.replace(location.href);
 					}else{
-						layer.msg('操作失败，请重试！', { icon: 5, time: 1000 });
+						layer.msg(res.msg ? res.msg : '操作失败，请重试！', { icon: 5, time: 1000 });
 					}
 				});
 			});
@@ -151,7 +151,7 @@
 						$(obj).remove();
 						layer.msg('操作成功!', { icon: 6, time: 1000 });
 					}else{
-						layer.msg('操作失败，请重试！', { icon: 5, time: 1000 });
+						layer.msg(res.msg ? res.msg : '操作失败，请重试！', { icon: 5, time: 1000 });
 					}
 				});
 				
@@ -172,7 +172,7 @@
 						$(obj).remove();
 						layer.msg('操作成功!', { icon: 6, time: 1000 });
 					}else{
-						layer.msg('操作失败，请重试！', { icon: 5, time: 1000 });
+						layer.msg(res.msg ? res.msg : '操作失败，请重试！', { icon: 5, time: 1000 });
 					}
 				});
 			});
