--- a/application/admin/view/goods/freight.html
+++ b/application/admin/view/goods/freight.html
@@ -92,7 +92,7 @@
 						layer.msg('操作成功', { icon: 6, time: 1000 });
 						window.location.replace(location.href);
 					}else{
-						layer.msg('操作失败，请重试！', { icon: 5, time: 1000 });
+						layer.msg(res.msg ? res.msg : '操作失败，请重试！', { icon: 5 });
 					}
 				});
 			});
