--- a/application/index/view/buy/submit_order.html
+++ b/application/index/view/buy/submit_order.html
@@ -100,8 +100,8 @@
 						<!--总计，运费-->
 						<div class="total-wrap">
 							<div class="clearfix">
-								<div class="pull-left">总计：￥<span id="goods_total">499.00</span></div>
-								<div class="pull-right">应付: <b>￥<span id="order_total">499.00</span></b><a class="btn-submit" onclick="submit();">提交订单</a></div> 
+								<div class="pull-left">总计：￥<span id="goods_total">{$info.price}</span></div>
+								<div class="pull-right">应付: <b>￥<span id="order_total">{$info.price}</span></b><a class="btn-submit" onclick="submit();">提交订单</a></div> 
 							</div>
 						</div>
 					</div>
