--- a/application/mobile/view/goods/check_order.html
+++ b/application/mobile/view/goods/check_order.html
@@ -143,7 +143,7 @@
                  <div class="favourable_item">
                      <div class="item_name">订单总和:</div>
                         <div>
-                            ￥ <span id="total">0.00</span>
+                            ￥ <span id="total">{$info.price}</span>
                      </div>
                  </div>
              </div>
@@ -183,7 +183,7 @@
                 <!-- footer -->
             <div class="footer">
                  <div class="price_box">
-                     应付金额: <span class="price_red">￥<span class="zongqian">0.00</span></span>
+                     应付金额: <span class="price_red">￥<span class="zongqian">{$freight ? $freight+$info.price : $info.price}</span></span>
                  </div>
                  <div class="sumb" onclick="submit();">
                      提交订单
