--- a/application/index/view/buy/order_info.html
+++ b/application/index/view/buy/order_info.html
@@ -119,13 +119,13 @@
 			</div>
 			</div>
 	        <!--底部-->
-	        <div class="footer"></div>	      
+	        <div class="footer">{include file="footer"}</div>	      
 		</div>
 		
 		
 		
 		 <script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>   
-         <script src="__STATIC__/js/public/footer.js"></script>
+         <!-- <script src="__STATIC__/js/public/footer.js"></script> -->
 		
 		
 		
