--- a/application/index/view/buy/order_pay.html
+++ b/application/index/view/buy/order_pay.html
@@ -58,11 +58,11 @@
 	        </div>
 		
 		</div>
-		<div class="footer"></div>
+		<div class="footer">{include file="footer"}</div>
 	
 		</div>
 	<script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
-	<script src="__STATIC__/js/public/footer.js"></script>
+	<!-- <script src="__STATIC__/js/public/footer.js"></script> -->
     <script type="text/javascript" src="/public/static/public/layer/layer.js"></script>
     <script>
     var sn = '{$sn}';
