--- a/application/index/view/index/import_data.html
+++ b/application/index/view/index/import_data.html
@@ -91,12 +91,12 @@
         </div>
 
         <!-- 底部 -->
-        <div class="footer"></div>
+        <div class="footer">{include file="footer"}</div>
         
     </div>  
     <iframe name="ajaxR" style="display:none;width:100%;height:500px;"></iframe>
     <script src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
-    <script src="__STATIC__/js/public/footer.js"></script>
+    <!-- <script src="__STATIC__/js/public/footer.js"></script> -->
     <script src="__STATIC__/js/public/selectDate.js"></script>
 	<script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
     <script>
