--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -108,10 +108,10 @@
 
 
 		</div>
-		<div class="footer"></div>
+		<div class="footer">{include file="footer"}</div>
 		<script type="text/javascript" src="__STATIC__/js/public/jquery-1.8.3.min.js"></script>
 		<!-- <script src="__STATIC__/js/public/header.js"></script> -->
-		<script src="__STATIC__/js/public/footer.js"></script>
+		<!-- <script src="__STATIC__/js/public/footer.js"></script> -->
 		<script type="text/javascript" src="/public/static/admin/lib/layer/2.4/layer.js"></script>
 	</div>
 
