去除优惠券

--- a/application/index/view/user/index.html
+++ b/application/index/view/user/index.html
@@ -89,7 +89,7 @@
 							<div style="position: absolute;top: 50%;left:50%;transform: translate(-50%,-50%);">
 								<p style="font-size: 25px;">账户余额</p>
 								<p style="color: red;font-size: 30px;">￥{$info.money}</p>
-								<p style="font-size: 20px;">优惠券{$coupon}张</p>
+								<!-- <p style="font-size: 20px;">优惠券{$coupon}张</p> -->
 							</div>
 
 						</div>
