--- a/application/mobile/view/goods/good_info.html
+++ b/application/mobile/view/goods/good_info.html
@@ -72,7 +72,7 @@
 				</div>
 
 				<!-- coupon -->
-				<div class="coupon">
+				<!-- <div class="coupon">
 					<span class="cou_ll">优惠券</span>
 					<div class="coupon_site">
 						<span class="receive_ll">领劵</span>
@@ -80,7 +80,7 @@
 							<img src="__STATIC__/img/purchase/back-a@2x.png" alt="">
 						</span>
 					</div>
-				</div>
+				</div> -->
 
 				<!-- particulars -->
 				<div class="particulars_box">
