--- a/application/mobile/view/user/index.html
+++ b/application/mobile/view/user/index.html
@@ -79,13 +79,13 @@
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
 				</li>
-				<li onclick="window.location.href='/mobile/user/coupons'">
+				<!-- <li onclick="window.location.href='/mobile/user/coupons'">
 
 					<img class="img1" src="__STATIC__/img/my/youhuiquan@2x.png" />
 					<a>我的优惠券</a>
 					<img class="img2" src="__STATIC__/img/my/youjian@2x.png" />
 
-				</li>
+				</li> -->
 				<!-- <li>
 
 					<img class="img1" src="__STATIC__/img/my/kefu@2x.png" />
