去掉优惠券

--- a/application/mobile/view/goods/check_order.html
+++ b/application/mobile/view/goods/check_order.html
@@ -102,7 +102,7 @@
              </div>
                 <!-- discount coupon -->
              <div class="coupon">
-                    <div class="mode mode-yhq" >
+                    <!-- <div class="mode mode-yhq" >
                             <div class=" yhq">优惠券</div>
                             <div class="discount">
                                 <div class="yhqq numm">
@@ -114,7 +114,7 @@
                             <div class="select usable">
                                     <img src="__STATIC__/img/purchase/back-a@2x.png" alt="" class="goRight">
                             </div>
-                    </div>
+                    </div> -->
                     <div class="mode mode-bz">
                             <div class=" bz">备注</div>
                             <textarea name="" id="note" id="" cols="103" rows="10" placeholder="暂无备注!" class="remark" ></textarea>
@@ -128,12 +128,12 @@
                          ￥ <span class="postage postage2">{$freight}</span>
                      </div>
                  </div>
-                 <div class="favourable_item">
+                 <!-- <div class="favourable_item">
                      <div class="item_name">优惠券折扣:</div>
                         <div>
                             -￥ <span class="coupon_discount coupon_discount2">0.00</span>
                      </div>
-                 </div>
+                 </div> -->
                  <div class="favourable_item">
                      <div class="item_name">余额抵扣:</div>
                         <div>
