--- a/application/index/view/buy/my_order.html
+++ b/application/index/view/buy/my_order.html
@@ -100,6 +100,11 @@
             </div>
             <!-- 底部 -->
 		    <div class="footer">
+                    <style>
+                            .footer img{
+                                width:100px;
+                            }
+                        </style>
                 {include file="footer"}
             </div>
         </div>    
