--- a/application/index/view/footer.html
+++ b/application/index/view/footer.html
@@ -4,7 +4,7 @@
             <ul>
                 <li><a href="#">基因检测</a></li>
                 <li><a href="#">什么是基因</a></li>
-                <li><a href="#">研究所</a></li>
+                <li><a href="{:url('about/index')}">关于我们</a></li>
                 <li><a href="#">联系我们</a></li>
             </ul>
         </div>
