--- a/application/index/view/referral/referral.html
+++ b/application/index/view/referral/referral.html
@@ -77,7 +77,12 @@
             	
             </div>
             
-            <!-- 底部 -->
+			<!-- 底部 -->
+			<style>
+				.footer img{
+					width:100px;
+				}
+			</style>
 		    <div class="footer">
 					{include file="footer"}
 				</div>
