--- a/application/index/view/header.html
+++ b/application/index/view/header.html
@@ -4,11 +4,12 @@
     </div>
     <div class="nav">
         <ul>
-                <li><a href="/index/index/index">首页</a></li>
+                <li><a href="/index/index/index">基因寻祖</a></li>
                 <li><a href="/index/gene/index">我的基因</a></li>
                 <li><a href="/index/buy/buy">购买</a></li>
-                <li><a href="/index/referral/referral">基因介绍</a></li>
-                <li><a href="/index/buy/my_order">我的订单</a></li>
+                <li><a href="/index/referral/referral">寻根故事</a></li>
+                <!-- <li><a href="/index/buy/my_order">我的订单</a></li> -->
+                <li><a href="/index/buy/my_order">帮助中心</a></li>
                 <li><a href="/index/about/index">关于我们</a></li>
         </ul>
     </div>
