--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -50,7 +50,7 @@
 						<li class="navItem">
 							<a href="/mobile/index/research">
 								<span><img src="__STATIC__/img/home/yanjiusuo@2x.png"></span>
-								<span>研究所</span>
+								<span>寻根故事</span>
 							</a>
 						</li>
 						<li class="navItem">
@@ -62,13 +62,13 @@
 						<li class="navItem">
 							<a href="/mobile/article/micro">
 								<span><img src="__STATIC__/img/home/shu@2x.png" ></span>
-								<span>微解读</span>
+								<span>基础知识</span>
 							</a>
 						</li>
 						<li class="navItem">
 							<a href="/mobile/article/skin">
 								<span><img src="__STATIC__/img/home/pifu@2x.png" alt=""></span>
-								<span>皮肤管理</span>
+								<span>会员礼品</span>
 							</a>
 						</li>
 					</ul>
