--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -68,7 +68,7 @@
 						<li class="navItem">
 							<a href="/mobile/article/skin">
 								<span><img src="__STATIC__/img/home/pifu@2x.png" alt=""></span>
-								<span>会员礼品</span>
+								<span>如何检测</span>
 							</a>
 						</li>
 					</ul>
