--- a/application/admin/view/system/module_bind.html
+++ b/application/admin/view/system/module_bind.html
@@ -17,7 +17,7 @@
             </div>
             <div>
                 <div class="row cl">
-                    <label class="form-label col-xs-4 col-sm-3">手机端 - 微解读：</label>
+                    <label class="form-label col-xs-4 col-sm-3">手机端 - 基因知识：</label>
                     <div class="formControls col-xs-8 col-sm-2">
                         <a class="module-select" id="micro-module" data-id="" onclick="select_module('micro');">{$info.micro.name ? $info.micro.name : '请绑定模块内容'}</a>
                         <input type="hidden" id="micro" name="micro" value="{$info.micro.value ? $info.micro.value :''}">
@@ -26,7 +26,7 @@
             </div>
             <div>
                 <div class="row cl">
-                    <label class="form-label col-xs-4 col-sm-3">手机端 - 皮肤管理：</label>
+                    <label class="form-label col-xs-4 col-sm-3">手机端 - 如何检测：</label>
                     <div class="formControls col-xs-8 col-sm-2">
                         <a class="module-select" id="skinss-module" data-id="" onclick="select_module('skinss');">{$info.skinss.name ? $info.skinss.name : '请绑定模块内容'}</a>
                         <input type="hidden" id="skinss" name="skinss" value="{$info.skinss.value ? $info.skinss.value :''}">
