--- a/application/mobile/view/index/index.html
+++ b/application/mobile/view/index/index.html
@@ -62,7 +62,7 @@
 						<li class="navItem">
 							<a href="/mobile/article/micro">
 								<span><img src="__STATIC__/img/home/shu@2x.png" ></span>
-								<span>基础知识</span>
+								<span>基因知识</span>
 							</a>
 						</li>
 						<li class="navItem">
