--- a/application/mobile/view/article/micro.html
+++ b/application/mobile/view/article/micro.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no" />
-		<title>微解读</title>
+		<title>基因知识</title>
 		<script src="__STATIC__/js/public/rem.js"></script>
         <link rel="stylesheet" href="__STATIC__/css/public/public.css">
         <link rel="stylesheet" href="__STATIC__/css/public/public_head.css">
@@ -18,7 +18,7 @@
                 <p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
                     <img class="lb_headWrap_return_img" src="__STATIC__/img/public/back@2x.png"/>
                 </p>
-                <span>微解读</span>
+                <span>基因知识</span>
             </div>
             
             <!-- 微解读列表 -->
