--- a/application/mobile/view/index/research.html
+++ b/application/mobile/view/index/research.html
@@ -4,7 +4,7 @@
 	<head>
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0,user-scalable=no" />
-		<title>研究所</title>
+		<title>寻根故事</title>
 		<script type="text/javascript" src="__STATIC__/js/public/rem.js"></script>
 		<link rel="stylesheet" type="text/css" href="__STATIC__/css/public/public.css" />
 		<link rel="stylesheet" type="text/css" href="__STATIC__/css/public/public_head.css" />
@@ -18,7 +18,7 @@
 				<p class="lb_headWrap_return" data-num="1" onclick="returnFun()">
 					<img class="lb_headWrap_return_img" src="__STATIC__/img/public/bottom_nav/back@2x.png" />
 				</p>
-				<span>研究所</span>
+				<span>寻根故事</span>
 			</div>
 			<div class="container">
 
